--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <meta http-equiv="refresh" content="0; URL='https://rhs-swcr.zachariahjudd.repl.co/home'" />
+    <meta http-equiv="refresh" content="0; URL='https://juddcraft12.github.io/RHS-SWCR/home/'" />
     <title></title>
   </head>
   <body>
