--- a/home/index.html
+++ b/home/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Discord knockoff</title>
     <link href="https://github.com/juddcraft12/RHS-SWCR/blob/main/style.css" rel="stylesheet" type="text/css" />
-    <link href="https://github.com/juddcraft12/RHS-SWCR/blob/main/home/index.css" rel="stylesheet" type="text/css" />
+    <link href="index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body onload='update(); clearStorage()'>
