--- a/home/index.html
+++ b/home/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Discord knockoff</title>
-    <link href="https://github.com/juddcraft12/RHS-SWCR/blob/main/style.css" rel="stylesheet" type="text/css" />
+    <link href="../style.css" rel="stylesheet" type="text/css" />
     <link href="index.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
@@ -24,7 +24,7 @@
             <div class='hide' id='makeRoom'>
                 <div id='exampleRoomWrapper'>
                     <!-- room preview -->
-                    <div id='makeRoomExample' class='makeRoomBox' style='background-image: url("https://github.com/juddcraft12/RHS-SWCR/blob/main/home/default_room.png"); background-repeat: no-repeat; background-size: 100% auto; background-color: #00688B'>
+                    <div id='makeRoomExample' class='makeRoomBox' style='background-image: url("default_room.png"); background-repeat: no-repeat; background-size: 100% auto; background-color: #00688B'>
                         
                         <span id='previewLock' class='fa fa-5x' style='color: white; text-shadow: 0 0 5px black; position: absolute; transform: translate(-50%, 75%)'></span>
 
@@ -115,7 +115,7 @@
             }
         }
 </script>
-    <script src="https://github.com/juddcraft12/RHS-SWCR/blob/main/home/index.js"></script>
-    <script src="https://github.com/juddcraft12/RHS-SWCR/blob/main/script.js"></script>
+    <script src="index.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
